--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@
   
   .whatsapp-icon {
     margin-top:13px;
+    margin-right: auto;
   }
   
   .whatsapp-icon {
@@ -237,7 +238,7 @@ header::before {
 }
 
 .why_image img {
-    max-width: 600px;
+    max-width: 550px;
     margin: auto;
 }
 
@@ -279,6 +280,20 @@ header::before {
     margin-bottom: 1.5rem;
     font-size: 1.2rem;
     color: var(--primary-color);
+}
+
+.why_content_terapias{
+    display: inline;
+}
+
+.why_content_terapias img{
+    max-width: 150px;
+    text-align: center;
+}
+
+.why_content_terapias li{
+    align-items: center;
+    display: flex;
 }
 
 .hero {
@@ -534,7 +549,7 @@ a.btn.membership_btn{
     position: relative;
     isolation: isolate;
     margin-bottom: 2rem;
-    display: flex;
+    display: inline;
     align-items: center;
     gap: 1rem;
 }
@@ -586,6 +601,8 @@ a.btn.membership_btn{
 }
 
 .stories_author_details h4{
+    line-height: 1.5rem;
+    display: inline;
     margin-bottom: 5px;
     font-size: 1.1rem;
     font-weight: 500;
@@ -597,6 +614,8 @@ a.btn.membership_btn{
     font-weight: 500;
     color: var(--text-light);
 }
+
+
 
 
 
