--- a/styles.css
+++ b/styles.css
@@ -344,73 +344,68 @@ header::before {
 }
 
 /* SPLIDE */
-.content{
-    width: 100vh;
-    height: 100vh;
-    display: flex;
+.wrapper{
+    position: relative;
     align-items: center;
-    justify-content: center;
+    display: flex;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
-.slider-wrapper{
-    font-size: 30px;
-    color: #aaa;
-    font-weight: bold;
-    text-transform: uppercase;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.wrapper h2{
+    padding: 0;
+    margin: 0;
+    color: var(--text-light);
     font-weight: 600;
+    font-size: 20px;
 }
-.slider{
-    height: 50px;
-    padding-left: 15px;
-    overflow: hidden;
-    
+
+.wrapper p{
+    color: var(--primary-color);
+    font-size: 18px;
+    margin: 0;
+    line-height: 35px;
 }
-.slider div{
-    color: #9fb6b6;
-    height: 50px;
-    margin-bottom: 50px;
-    padding: 4px 15px;
-    text-align: center;
-    box-sizing: border-box;
-    
+
+.wrapper a{
+    background: crimson;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 25px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-top: 30px;
 }
-.slider-text1{
-    background: var(--primary-color);
-    animation: slide 7s linear infinite;
-    border-radius: 15px;
-    font-size: 2rem;
+.wrapper span:before{
+    content: "";
+    font-size: 20px;
+    color: var(--primary-color);
+    animation: animate infinite 8s;
 }
-.slider-text2{
-    background: var(--text-light);
-    border-radius: 15px;
-    font-size: 2rem;
+
+@keyframes animate{
+    10%{
+        content: "Hatha";
+    }
+    20%{
+        content: "Yin";
+    }
+    40%{
+        content: "Iyengar";
+    }
+    60%{
+        content: "Nidra";
+    }
+    80%{
+        content: "Facial";
+    }
 }
-.slider-text3{
-    background: var(--text-light);
-    border-radius: 15px;
-    font-size: 1.5rem;
-}
-.slider-text4{
-    background: var(--text-light);
-    border-radius: 15px;
-    font-size: 2rem;
-}
-.slider-text5{
-    background: var(--primary-color);
-    border-radius: 15px;
-    font-size: 2rem;
-}
-@keyframes slide{
-    0% {margin-top: -300px;}
-    5% {margin-top: -200px;}
-    33% {margin-top: -200px;}
-    38% {margin-top: -100px;}
-    66% {margin-top: -100px;}
-    71% {margin-top: 0px;}
-    100% {margin-top: 0px;}
-}
+
+
+
+
+
+
 
 /* END OFSPLIDE */
 
