--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,9 @@
   }
 
 /* MENÚ HAMBURGUESA */
-
+#toggle{
+    display: none;
+}
 
 
 /* fin hamb */
@@ -854,6 +856,13 @@ a.btn.membership_btn{
       grid-template-columns: repeat(1, 1fr);
     }
 
+    #toggle{
+        display: block;
+        font-size: 1.5rem;
+        font-weight: 700;
+        color: var(--dark-primary-color);
+        cursor: pointer;
+    }
     
   
     .header_image {
